btn-purchase: remove net_profit, squash bug and clean up some of the CSS

--- a/src/sass/app_2/modules/trading.scss
+++ b/src/sass/app_2/modules/trading.scss
@@ -95,32 +95,6 @@
             border-radius: $BORDER_RADIUS;
         }
     }
-    &__currency {
-        position: absolute;
-        float: left;
-        font-size: 10px;
-        height: 32px;
-        left: 32px;
-        align-items: center;
-        justify-content: center;
-        width: 20px;
-        display: flex;
-        background: transparent;
-        border-color: transparent;
-        z-index: 2;
-        @include themify($themes) {
-            color: themed('text_primary_color');
-        }
-
-        &--symbol {
-            font-size: 1.4em;
-            line-height: 1.5;
-        }
-        &:before {
-            @include typeface(--paragraph-center-normal-black);
-            color: inherit;
-        }
-    }
     &__price {
         line-height: 0.9rem;
         border: 0;
@@ -366,35 +340,11 @@
     &:not(&--disabled) {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.24);
     }
-    &__info {
-        width: 40%;
-        padding-left: 10%;
-        float: right;
-        text-align: right;
-        height: 56px;
-        padding-right: 10px;
-        display: flex;
-        flex-direction: column;
-    }
-    &__return {
+    &__text {
         @include typeface(--paragraph-left-bold-active);
-        display: flex;
-        justify-content: flex-end;
-        flex-grow: 1;
-        align-items: flex-end;
     }
-    &__profit {
-        @include typeface(--xsmall-left-bold-active);
-        display: flex;
-        justify-content: flex-end;
-        flex-grow: 1;
-        align-items: flex-start;
-        line-height: unset;
-    }
-    &__trade-type {
-        background-color: $COLOR_GREEN_1;
+    &__info {
         color: $COLOR_WHITE;
-        float: left;
         text-align: left;
         position: relative;
         display: flex;
@@ -402,15 +352,15 @@
         align-items: center;
         padding-left: 10px;
         height: 56px;
+    }
+    &__info--left {
+        background-color: $COLOR_GREEN_1;
         width: 60%;
+        float: left;
 
         .btn-purchase__text_wrapper {
             margin-left: 24px;
             position: absolute;
-
-            .btn-purchase__text {
-                @include typeface(--paragraph-left-bold-active);
-            }
         }
         .btn-purchase__icon_wrapper {
             @extend %inline-icon.white;
@@ -421,6 +371,14 @@
                 }
             }
         }
+    }
+    &__info--right {
+        width: 40%;
+        padding-left: 10%;
+        padding-right: 10px;
+        float: right;
+        justify-content: right;
+        background-color: transparent;
     }
     &__effect-detail {
         width: 0;
@@ -467,9 +425,19 @@
             color: themed('disabled_color');
         }
 
-        .btn-purchase__trade-type {
+        .btn-purchase__info--left {
             @include themify($themes) {
                 background-color: themed('btn_purchase_disabled_accent');
+            }
+        }
+        .btn-purchase__effect-detail {
+            @include themify($themes) {
+                border-color: transparent transparent transparent themed('btn_purchase_disabled_accent');
+            }
+        }
+        .btn-purchase__info--right {
+            @include themify($themes) {
+                background-color: themed('btn_purchase_disabled_bg');
             }
 
             svg {
@@ -482,25 +450,6 @@
                     color: themed('disabled_color');
                 }
             }
-        }
-        .btn-purchase__return, .btn-purchase__profit {
-            @include themify($themes) {
-                color: themed('disabled_color');
-            }
-        }
-        .btn-purchase__effect-main {
-            @include themify($themes) {
-                background-color: themed('btn_purchase_disabled_accent');
-                color: themed('disabled_color');
-            }
-        }
-        .btn-purchase__effect-detail {
-            @include themify($themes) {
-                border-color: transparent transparent transparent themed('btn_purchase_disabled_accent');
-            }
-        }
-        .btn-purchase__currency {
-            color: $COLOR_DARK_BLUE_8;
         }
     }
     &--animated {
@@ -521,9 +470,6 @@
             .btn-purchase__text {
                 display: block;
             }
-        }
-        .btn-purchase__info .btn-purchase__text_wrapper {
-            margin: 4px 0;
         }
     }
     &__shadow-wrapper:hover:after {
